--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "vercel-build": "npm install"
+    "vercel-build": "echo 'No build step required'"
   },
   "dependencies": {
     "express": "^4.21.2",
