--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
-   "version": 2,
-   "builds": [
-     {
-       "src": "api/package.json",
-       "use": "@vercel/static-build",
-       "config": { "distDir": "api/build" }
-     }
-   ],
-   "routes": [
-     { "src": "/(.*)", "dest": "api/$1" }
-   ]
- } 
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/server.js"
+    }
+  ]
+}
