--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "vercel-build": "echo 'No build step required'"
+    "vercel-build": "echo 'No build step required'",
+    "build": "echo 'No build step required'",
+    "preinstall": "npm install"
   },
   "dependencies": {
     "express": "^4.21.2",
@@ -18,6 +20,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=14"
   },
   "author": "",
   "license": "ISC"
